alignment fix

--- a/styles/light.css
+++ b/styles/light.css
@@ -271,7 +271,7 @@ body {
     justify-content: center;
     justify-items: center;
     align-items: center;
-    height: 220px;
+    height: 210px;
     overflow-y: auto;
     overflow-x: hidden;
     scrollbar-width: none;
